Add invoice # to charge; remove background

--- a/index.html
+++ b/index.html
@@ -153,10 +153,16 @@
                                   action="javascript:chargeCard()">
                                 <p class="h4 text-center py-4">Charge Existing Profile</p>
                                 <div class="form-row">
-                                    <div class="col-md-12">
+                                    <div class="col-md-6">
                                         <div class="md-form">
                                             <input type="text" class="form-control" name="amount" id="amount" required />
                                             <label for="amount" class="font-weight-light">Amount</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="md-form">
+                                            <input type="text" class="form-control" name="invoice" id="invoice" />
+                                            <label for="invoice" class="font-weight-light">Invoice # (Optional)</label>
                                         </div>
                                     </div>
                                 </div>
